# sentinel

./: .gitignore  CLAUDE.md  DESIGN.md  HANDOFF.md  index.html  package-lock.json  package.json  release-notes-v1.0.1.md  release-notes-v1.0.2.md  release-notes-v1.0.3.md  release-notes-v1.0.4.md  release-notes-v1.0.5.md  release-notes-v1.0.6.md  release-notes-v1.0.7.md
.github/workflows/: release.yml
scripts/: setup-lhm.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/lhm/: README.txt
src-tauri/src/: config.rs  disk_map.rs  lhm_sidecar.rs  lib.rs  main.rs  metrics.rs  nvme.rs  services.rs
src/components/: ClockCalendar.tsx  CompactMode.tsx  ContextMenu.tsx  Header.tsx  HealthCheck.tsx  MemoEditor.tsx  MemoSection.tsx  PcMetrics.tsx  ServiceStatus.tsx  SettingsPanel.tsx  Sparkline.tsx  TargetEditor.tsx  WeatherForecast.tsx  WeatherIcon.tsx
src/hooks/: useFocus.ts  useHealthStatus.ts  useHolidays.ts  useServiceStatus.ts  useSystemMetrics.ts  useWeather.ts
src/styles/: global.css
src/types/: index.ts
