[package]
name = "sentinel"
version = "1.0.3"
description = "Desktop status monitor widget"
authors = ["osprey74"]
edition = "2021"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
notify = "7"
dirs-next = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
